2019-02-12  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #24122]
	* elf/Makefile (tests): Add tst-audit13.
	(modules-names): Add tst-audit13mod1.
	(tst-audit13.out, LDFLAGS-tst-audit13mod1.so, tst-audit13-ENV): New
	rule.
	* elf/tst-audit13.c: New file.
	* elf/tst-audit13mod1.c: Likewise.

2019-02-12  Florian Weimer  <fweimer@redhat.com>

	[BZ #24122]
	* elf/rtld.c (unload_audit_module): New function.
	(report_audit_module_load_error): Likewise.
	(load_audit_module): Likewise.  Extracted from dl_main.  Call
	_dl_close if the laversion symbol cannot be found.  Use early
	returns for error handling.  Add malloc error check.  Check for a
	zero return value from la_version.  Remove spurious comment about
	static TLS initialization.  Remove useless casts.
	(notify_audit_modules_of_loaded_object): New function.  Extracted
	from dl_main.
	(load_audit_module): Likewise.
	(dl_main): Call load_audit_modules.

2019-02-12  Joseph Myers  <joseph@codesourcery.com>

	* elf/dl-exception.c (_dl_exception_create_format): Add
	fall-through comments.
	* elf/ldconfig.c (parse_conf_include): Likewise.
	* elf/rtld.c (print_statistics): Likewise.
	* locale/programs/charmap.c (parse_charmap): Likewise.
	* misc/mntent_r.c (__getmntent_r): Likewise.
	* posix/wordexp.c (parse_arith): Likewise.
	(parse_backtick): Likewise.
	* resolv/ns_ttl.c (ns_parse_ttl): Likewise.
	* sysdeps/x86/cpu-features.c (init_cpu_features): Likewise.
	* sysdeps/x86_64/dl-machine.h (elf_machine_rela): Likewise.

2019-02-11  Paul A. Clarke  <pc@us.ibm.com>

	* sysdeps/powerpc/fpu/e_sqrt.c (__slow_ieee754_sqrtf):
	Use float instead of double.

2019-02-11  TAMUKI Shoichi  <tamuki@linet.gr.jp>

	* time/strftime_l.c: Fix a few whitespace arrangement inconsistencies.

2019-02-08  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/powerpc/bits/mathinline.h: Remove.

2019-02-08  Florian Weimer  <fweimer@redhat.com>

	math: Enable <bits/math-finite.h> sysdeps override, as used on ia64.